<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_stop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/f_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.51"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape5"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />


    <TextView
        android:id="@+id/R_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="00.00"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/race_distance_km"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/R_data"
        app:layout_constraintStart_toStartOf="@+id/R_data"
        app:layout_constraintTop_toBottomOf="@+id/R_data" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView11"-->
<!--        android:layout_width="299dp"-->
<!--        android:layout_height="138dp"-->
<!--        app:srcCompat="@drawable/ic_baseline_directions_run_24"-->
<!--        tools:ignore="VectorDrawableCompat"-->
<!--        tools:layout_editor_absoluteX="47dp"-->
<!--        tools:layout_editor_absoluteY="72dp" />-->

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingTop="10dp"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/race_time"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/chronometer"
        app:layout_constraintStart_toStartOf="@+id/chronometer"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="84dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/btn_start"
        app:layout_constraintTop_toTopOf="@+id/btn_start"
        app:srcCompat="@drawable/ic_touch2"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race_start"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/btn_start"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />

    <TextView
        android:id="@+id/btn_stop1"
        android:layout_width="84dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:textColor="#000000"
        android:textSize="25dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race_stop"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/btn_start"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="379dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toTopOf="@+id/f_map"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />


    <!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:text="סיום"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/f_map"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/imageView11"-->
<!--        app:layout_constraintStart_toStartOf="@+id/imageView11" />-->

</androidx.constraintlayout.widget.ConstraintLayout>